--- a/Encryption-Decryption/I command you/task.html
+++ b/Encryption-Decryption/I command you/task.html
@@ -1,31 +1,19 @@
-<h2 style="text-align: center;">Description</h2>
-
-<p>Modify the previous program to work with command-line arguments instead of the standard input. The program must parse three arguments: <strong>-mode</strong>, <strong>-key</strong> and <strong>-data</strong>. The first argument should determine the program’s mode (<strong>enc</strong> - encryption, <strong>dec</strong> - decryption). The second argument is an integer key to modify the message, and the third argument is a text or ciphertext to encrypt or decrypt.</p>
-
-<p>All the arguments are guaranteed to be passed to the program. If for some reason it turns out to be wrong:</p>
-
+<div class="step-text">
+<h5 id="description">Description</h5>
+<p>Modify the previous program to work with command-line arguments instead of the standard input.</p>
+<p>You need to put it in quotes to pass an argument that contains spaces as a single argument. So <code class="java">"Welcome to hyperskill!"</code> becomes a single <code class="java">Welcome to hyperskill!</code> argument without quotes. You need quotes to pass this argument, but you don't need to remove these quotes in the actual code!</p>
+<h5 id="objectives">Objectives</h5>
+<p>The program must parse three arguments: <code class="java">-mode</code>, <code class="java">-key</code>, and <code class="java">-data</code>. The first argument should determine the program's mode (<code class="java">enc</code> for encryption, <code class="java">dec</code> for decryption). The second argument is an integer key to modify the message, and the third is a text or ciphertext to encrypt/decrypt.</p>
+<p>Arguments are guaranteed to be passed to the program. If, for some reason, they turn out to be wrong:</p>
 <ol>
-	<li>If there is no <strong>-mode</strong>, the program should work in <strong>enc</strong> mode.</li>
-	<li>If there is no <strong>-key</strong>, the program should consider that <strong>key</strong> = 0.</li>
-	<li>If there is no <strong>-data</strong>, the program should assume that the <strong>data </strong>is an empty string.</li>
+<li>If there is no <code class="java">-mode</code>, the program should work in the <code class="java">enc</code> mode;</li>
+<li>If there is no <code class="java">-key</code>, the program should consider that it is <code class="java">0</code>;</li>
+<li>If there is no <code class="java">-data</code>, the program should assume that <code class="java">data</code><strong> </strong>is an empty string.</li>
 </ol>
-
-<p>Keep in mind that arguments may be in different order. For example,<strong> -mode enc</strong> may be at the end, at the beginning or in the middle of arguments array.</p>
-
-<p><div class="alert alert-primary">Note, that to pass an argument that contain spaces as a single argument you need to wrap it in quotes. So <code class="java">"Welcome to hyperskill!"</code> becomes single <code class="java">Welcome to hyperskill!</code> argument that doesn't contain quotes. You need quotes to pass this argument in the terminal, but you don't need to remove these quotes in the actual code! As the following examples show arguments from the terminal perspective, they are wrapped in quotes.</div></p>
-
-<h2 style="text-align: center;">Run configuration examples for encryption</h2>
-
-<pre><code class="language-no-highlight">java Main -mode enc -key 5 -data "Welcome to hyperskill!"</code></pre>
-
-<h2 style="text-align: center;">Encryption output example</h2>
-
-<pre><code class="java">\jqhtrj%yt%m~ujwxpnqq&amp;</code></pre>
-
-<h2 style="text-align: center;">Run configuration examples for decryption</h2>
-
-<pre><code class="language-no-highlight">java Main -key 5 -data "\jqhtrj%yt%m~ujwxpnqq&amp;" -mode dec</code></pre>
-
-<h2 style="text-align: center;">Decryption output example</h2>
-
-<pre><code class="java">Welcome to hyperskill!</code></pre>
+<p>Keep in mind that the order of the arguments might be different. For example,<strong> </strong><code class="java">-mode enc</code> maybe at the end, at the beginning, or in the middle of the array.</p>
+<h5 id="examples">Examples</h5>
+<p><strong>Example 1:</strong> <em>encryption; the arguments are: -mode enc -key 5 -data "Welcome to hyperskill!"</em></p>
+<pre><code class="language-no-highlight">\jqhtrj%yt%m~ujwxpnqq&amp;</code></pre>
+<p><strong>Example 2:</strong> <em>decryption; the arguments are: -key 5 -data "\jqhtrj%yt%m~ujwxpnqq&amp;" -mode dec</em></p>
+<pre><code class="language-no-highlight">Welcome to hyperskill!</code></pre>
+</div>
